corrected spacing for readmore link

--- a/template/templates/fritopies/css/editor_content.css
+++ b/template/templates/fritopies/css/editor_content.css
@@ -7,6 +7,7 @@
 	float: right;
 	font-size: 10px;
 	font-weight: bold;
+	margin-top: -10px;
 	text-decoration: none;
 	text-transform: uppercase;
 }
